--- a/ios/SPRAY/Info.plist
+++ b/ios/SPRAY/Info.plist
@@ -59,6 +59,7 @@
 		<string>Poppins-Regular.ttf</string>
 		<string>Poppins-SemiBold.ttf</string>
 		<string>Poppins-Thin.ttf</string>
+		<string>Rubik-Medium.ttf</string>
 	</array>
 </dict>
 </plist>
