--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "axios": "^0.27.2",
     "pod-install": "^0.1.38",
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-awesome-alerts": "^2.0.0",
+    "react-native-curved-bottom-bar": "^2.0.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-svg": "^13.0.0",
     "react-native-validator-form": "^1.0.0",
     "react-native-vector-icons": "^9.2.0"
   },
