--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.7.0",
     "axios": "^0.27.2",
     "pod-install": "^0.1.38",
+    "progress-hud": "^1.3.2",
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-awesome-alerts": "^2.0.0",
