--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
@@ -25,7 +26,8 @@
     "react-native-screens": "^3.15.0",
     "react-native-svg": "^13.0.0",
     "react-native-validator-form": "^1.0.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "storage-manager": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
