--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "axios": "^0.27.2",
+    "deprecated-react-native-prop-types": "^2.2.0",
     "pod-install": "^0.1.38",
     "progress-hud": "^1.3.2",
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-awesome-alerts": "^2.0.0",
+    "react-native-camera": "^4.2.1",
     "react-native-curved-bottom-bar": "^2.0.1",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-permissions": "^3.6.1",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-svg": "^13.0.0",
