--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "progress-hud": "^1.3.2",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-animatable": "^1.3.3",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-camera": "^4.2.1",
     "react-native-curved-bottom-bar": "^2.0.1",
+    "react-native-image-crop-picker": "^0.38.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-permissions": "^3.6.1",
+    "react-native-qr-decode-image-camera": "^1.1.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
