--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -258,6 +258,7 @@ android {
 }
 
 dependencies {
+    implementation project(':rn-qr-generator')
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
 
