--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,10 +1,12 @@
 rootProject.name = 'SPRAY'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
-
+include ':react-native-qr-generator'
+project(':react-native-qr-generator').projectDir = new File(rootProject.projectDir, 	'../node_modules/react-native-qr-generator/android')
 includeBuild('../node_modules/react-native-gradle-plugin')
 include ':react-native-camera'
 project(':react-native-camera').projectDir = new File(rootProject.projectDir,   '../node_modules/react-native-camera/android')
+
 
 if (settings.hasProperty("newArchEnabled") && settings.newArchEnabled == "true") {
     include(":ReactAndroid")
