--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-svg": "^13.0.0",
     "react-native-validator-form": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
+    "rn-qr-generator": "^1.2.1",
     "storage-manager": "^1.3.0"
   },
   "devDependencies": {
