--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "progress-hud": "^1.3.2",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-actionsheet": "^2.4.2",
     "react-native-animatable": "^1.3.3",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-camera": "^4.2.1",
