--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -6,7 +6,8 @@ project(':react-native-qr-generator').projectDir = new File(rootProject.projectD
 includeBuild('../node_modules/react-native-gradle-plugin')
 include ':react-native-camera'
 project(':react-native-camera').projectDir = new File(rootProject.projectDir,   '../node_modules/react-native-camera/android')
-
+include ':@react-native-community_cameraroll'
+project(':@react-native-community_cameraroll').projectDir = new File(rootProject.projectDir, 	'../node_modules/@react-native-community/cameraroll/android')
 
 if (settings.hasProperty("newArchEnabled") && settings.newArchEnabled == "true") {
     include(":ReactAndroid")
