--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-clipboard/clipboard": "^1.11.0",
+    "@react-native-community/cameraroll": "^4.1.2",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "axios": "^0.27.2",
-
-
     "deprecated-react-native-prop-types": "^2.3.0",
-
+    "fbjs": "^3.0.4",
     "pod-install": "^0.1.38",
     "progress-hud": "^1.3.2",
     "react": "18.0.0",
@@ -28,15 +28,18 @@
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-camera": "^4.2.1",
     "react-native-curved-bottom-bar": "^2.0.1",
+    "react-native-fs": "^2.20.0",
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^4.12.4",
     "react-native-permissions": "^3.6.1",
     "react-native-qr-decode-image-camera": "^1.1.1",
     "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-qrcode-svg": "^6.1.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
-    "react-native-svg": "^13.0.0",
+    "react-native-svg": "^13.1.0",
     "react-native-validator-form": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
     "rn-qr-generator": "^1.2.1",
