--- a/ios/SPRAY/Info.plist
+++ b/ios/SPRAY/Info.plist
@@ -60,6 +60,7 @@
 		<string>Poppins-SemiBold.ttf</string>
 		<string>Poppins-Thin.ttf</string>
 		<string>Rubik-Medium.ttf</string>
+		<string>HKGrotesk-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
